<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.hashiri.harshlands</groupId>
    <artifactId>harshlands-parent</artifactId>
    <version>1.2.14-RELEASE</version>
    <packaging>pom</packaging>

    <name>Harshlands</name>
    <description>The RLCraft Experience for Spigot/Paper | Thirst, Temperature, RPG and More</description>
    <url>https://www.spigotmc.org/resources/realistic-survival-1-17-hardcore-modded-experience.93795/</url>

    <modules>
        <module>core</module>
        <module>spigot_impl_1_21_R11</module>
        <module>dist</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

</project>
